# CodeGenius_Backend

./: pyproject.toml  requirement.tsx  requirements.txt  web.config
app/: main.py  web.config
app/models/: schemas.py
app/services/: code_generator.py  function_parser.py  nlp_processor.py  odata_parser.py
app/templates/: controller_template.j2  document_view_template.j2  function_controller_template.j2  function_javascript_template.j2  function_model_template.j2  function_view_template.j2  lines_controller_method_template.j2  lines_function_controller_template.j2  lines_function_javascript_template.j2  lines_function_model_template.j2  lines_function_view_template.j2  lines_model_template.j2  lines_view_template.j2  list_view_template.j2  main_view_template.j2  model_template.j2
