[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.119.0",
    "jinja2>=3.1.6",
    "pydantic>=2.12.2",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "spacy>=3.8.7",
    "uvicorn[standard]>=0.37.0",
]
